--- a/sass/secundarios/_mediaquerie.scss
+++ b/sass/secundarios/_mediaquerie.scss
@@ -72,7 +72,6 @@
     }
 
     .mainindex__sec4 {
-        margin-top: $medida-2 * 3;
         width: 95%;
         margin-bottom: 6rem;
         display: flex;
@@ -83,7 +82,7 @@
             text-align: center;
             font-size: 4.25rem;
             text-decoration: underline nth($colores, 5);
-            font-family: Tiemann, serif
+            font-family: Tiemann, serif;
         }
 
         .mainindex__sec4__div1 {
@@ -158,37 +157,10 @@
                 font-family: Tiemann, serif;
             }
         }
-
-        .mainindex__sec4__boton {
-            display: flex;
-            justify-content: center;
-            margin-top: 6rem;
-            font-size: $medida-1 + $medida-3;
-            transition: 1s;
-
-            button {
-                border: 0.3rem solid nth($colores, 2);
-                background-color: nth($colores, 3);
-                border-radius: $medida-3;
-                transition: 1s;
-
-                &:hover {
-                    transform: scale(1.08);
-                }
-
-                a {
-                    display: inline-block;
-                    padding: $medida-1;
-                    text-decoration: none;
-                    color: nth($colores, 2);
-                    letter-spacing: 0.15rem;
-                    font-weight: bold;
-                    border: 0.3rem solid nth($colores, 7);
-                }
-            }
-        }
     }
-
+    .mainindex__sec4m{
+        @extend %noned
+    }
     /*estilos de nos*/
     .contenedornos {
         flex-direction: row-reverse;
